variant and template interface